
Version 1.3.9
-------------

- OS X: fixed corruption of first entry when opening catalog from manager


Version 1.3.8
-------------

- OS X: fixed startup on computers that didn't have Poedit installed before
- fixed translation status color indicator to work correctly in case
  of plural entries
- changed the official spelling from "poEdit" to "Poedit"
- preserve old msgid records (#| msgid "...") when saving
- preserve deleted records when updating catalogs
- preserve msgctxt entries in catalogs (#1680554)
- OS X: Sparkle is now used for automatic updates
- OS X: fixed spell checker to use catalog's language
- fixed View->Display quotes setting broken in 1.3.7
- Windows: fixed crash when catalog update removes translations
- added more translations:
     Irish (Seanán Ó Coistín)


Version 1.3.7
-------------

- Windows: Windows 95/98 is no longer supported by the official binary
- OS X: Poedit is now built as Universal binary
- fixed the Preferences menu entry in catalogs manager
- fixed to handle file references with Windows paths on Unix
- fixed the "failed to convert to unicode" bug when saving (#1589744)
- OS X: fixed clicking on PO files in Finder (#1583967)
- fixed opening source files in external editor if the path contains
  spaces (#1743172)
- Windows: fixed keyboard navigation in Find dialog (#1697743)
- added more translations:
     Urdu (Muhammad Shakir Aziz)


Version 1.3.6
-------------

- fixed failure to load correct catalogs without error message
- fixed loading of X-Poedit-Language header (#1567018)
- fixed loading of files in charsets other than UTF-8 (#1562780)
- fixed shortcuts on Mac OS X to not use Alt+something


Version 1.3.5
-------------

- fixed Content-Type header parsing (bug #1346495)
- Unicode build of wxWidgets 2.6 is now required
- fixed bug with entering numbers when using German translation (#1325590)
- fixed broken layout on startup when showing comments window (#1313612)
- initial Mac OS X port