@@ -29,7 +29,7 @@ part of many Linux distributions.
 =========================
 
 Poedit is built on top of wxWidgets toolkit, so it requires it at 
-compilation time (version 2.6.0 or newer, see http://www.wxwidgets.org).
+compilation time (version 2.8.0 or newer, see http://www.wxwidgets.org).
 Additional requirements are Berkeley DB >= 3 if you need translation memory
 and GtkSpell 2.x plus GTK+ 2 build of wxWidgets for spell checking support
 (Unix only).
