@@ -1,4 +1,6 @@
 
+- wxWidgets >= 2.8 is now required
+
 Version 1.3.9
 -------------
 
